akuity-manifests-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: akuity
  namespace: akuity
---
apiVersion: v1
kind: Service
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd-applicationset
    generation: "1"
  name: argocd-applicationset-controller
  namespace: akuity
spec:
  ports:
  - name: webhook
    port: 7000
    protocol: TCP
    targetPort: webhook
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-applicationset-controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: metrics
    app.kubernetes.io/name: argocd-metrics
    app.kubernetes.io/part-of: argocd
    generation: "1"
  name: argocd-metrics
  namespace: akuity
spec:
  ports:
  - name: metrics
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-application-controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/name: argocd-notifications-controller-metrics
    generation: "1"
  name: argocd-notifications-controller-metrics
  namespace: akuity
spec:
  ports:
  - name: metrics
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app.kubernetes.io/name: argocd-notifications-controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/part-of: argocd
    generation: "1"
  name: argocd-redis
  namespace: akuity
spec:
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: argocd-redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
    generation: "1"
  name: argocd-repo-server
  namespace: akuity
spec:
  ports:
  - name: server
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: metrics
    port: 8084
    protocol: TCP
    targetPort: 8084
  selector:
    app.kubernetes.io/name: argocd-repo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/name: akuity-agent
    generation: "1"
  name: akuity-agent
  namespace: akuity
spec:
  progressDeadlineSeconds: 300
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: akuity-agent
  strategy:
    rollingUpdate:
      maxSurge: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: akuity-agent
    spec:
      containers:
      - args:
        - tunnel
        - --health-time-delta=50s
        - --agent-server=https://walu4gkdu1ejkj87-agentsvr.cdsvcs.akuity.cloud
        - --kube-server-port=1030
        - --repo-server-port=1031
        - --appset-webhook-port=1032
        - --cluster-hostname=cluster-staging
        image: quay.io/akuityio/agent:0.3.29
        imagePullPolicy: IfNotPresent
        name: akuity-agent
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 8080
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: akuity-agent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/part-of: argocd
    generation: "1"
  name: argocd-application-controller
  namespace: akuity
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-application-controller
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-application-controller
              topologyKey: kubernetes.io/hostname
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: argocd
              topologyKey: kubernetes.io/hostname
            weight: 5
      containers:
      - args:
        - syncer
        - --generation=1
        - --redis
        - walu4gkdu1ejkj87-cache.cdsvcs.akuity.cloud:443
        - --redis-use-tls
        image: quay.io/akuityio/agent:0.3.29
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/akuity-agent
              - wait-for-syncer
        name: syncer
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /cplane
          name: cplane
      - args:
        - --redis
        - walu4gkdu1ejkj87-cache.cdsvcs.akuity.cloud:443
        - --redis-use-tls
        command:
        - argocd-application-controller
        image: quay.io/argoproj/argocd:v2.5.1
        imagePullPolicy: IfNotPresent
        name: argocd-application-controller
        ports:
        - containerPort: 8082
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /app/config/controller/tls
          name: argocd-repo-server-tls
        - mountPath: /home/argocd
          name: argocd-home
        - mountPath: /cplane
          name: cplane
        workingDir: /home/argocd
      hostAliases:
      - hostnames:
        - cluster-staging
        ip: 127.0.0.1
      serviceAccountName: argocd-application-controller
      volumes:
      - emptyDir: {}
        name: argocd-home
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - name: cplane
        secret:
          secretName: cplane
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd-applicationset
    generation: "1"
  name: argocd-applicationset-controller
  namespace: akuity
spec:
  replicas: 0
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-applicationset-controller
    spec:
      containers:
      - command:
        - entrypoint.sh
        - argocd-applicationset-controller
        image: quay.io/argoproj/argocd:v2.5.1
        imagePullPolicy: IfNotPresent
        name: argocd-applicationset-controller
        ports:
        - containerPort: 7000
          name: webhook
        - containerPort: 8080
          name: metrics
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/gpg/source
          name: gpg-keys
        - mountPath: /app/config/gpg/keys
          name: gpg-keyring
        - mountPath: /tmp
          name: tmp
        - mountPath: /cplane
          name: cplane
      hostAliases:
      - hostnames:
        - cluster-staging
        ip: 127.0.0.1
      serviceAccountName: argocd-applicationset-controller
      volumes:
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - configMap:
          name: argocd-gpg-keys-cm
        name: gpg-keys
      - emptyDir: {}
        name: gpg-keyring
      - emptyDir: {}
        name: tmp
      - name: cplane
        secret:
          secretName: cplane-privileged
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: argocd-image-updater
    app.kubernetes.io/part-of: argocd
    generation: "1"
  name: argocd-image-updater
  namespace: akuity
spec:
  replicas: 0
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-image-updater
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-image-updater
    spec:
      containers:
      - command:
        - /usr/local/bin/argocd-image-updater
        - run
        image: quay.io/argoprojlabs/argocd-image-updater:v0.12.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 30
        name: argocd-image-updater
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 30
        resources:
          requests:
            cpu: 2m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /app/config
          name: image-updater-conf
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/.ssh
          name: ssh-config
        - mountPath: /cplane
          name: cplane
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: argocd-image-updater
      volumes:
      - configMap:
          items:
          - key: registries.conf
            path: registries.conf
          - key: git.commit-message-template
            path: commit.template
          name: argocd-image-updater-config
          optional: true
        name: image-updater-conf
      - configMap:
          name: argocd-ssh-known-hosts-cm
          optional: true
        name: ssh-known-hosts
      - configMap:
          name: argocd-image-updater-ssh-config
          optional: true
        name: ssh-config
      - name: cplane
        secret:
          secretName: cplane
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: argocd-notifications-controller
  namespace: akuity
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-notifications-controller
    spec:
      containers:
      - command:
        - argocd-notifications
        image: quay.io/argoproj/argocd:v2.5.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 9001
        name: argocd-notifications-controller
        resources:
          requests:
            cpu: 1m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/reposerver/tls
          name: argocd-repo-server-tls
        - mountPath: /cplane
          name: cplane
        workingDir: /app
      hostAliases:
      - hostnames:
        - cluster-staging
        ip: 127.0.0.1
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: argocd-notifications-controller
      volumes:
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - name: cplane
        secret:
          secretName: cplane
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/part-of: argocd
    generation: "1"
  name: argocd-redis
  namespace: akuity
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-redis
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-redis
              topologyKey: kubernetes.io/hostname
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: argocd
              topologyKey: kubernetes.io/hostname
            weight: 5
      automountServiceAccountToken: false
      containers:
      - args:
        - --save
        - ""
        - --appendonly
        - "no"
        image: quay.io/akuity/redis:7.0.8-alpine
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: argocd-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
    generation: "1"
  name: argocd-repo-server
  namespace: akuity
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-repo-server
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-repo-server
              topologyKey: kubernetes.io/hostname
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/part-of: argocd
              topologyKey: kubernetes.io/hostname
            weight: 5
      automountServiceAccountToken: false
      containers:
      - command:
        - sh
        - -c
        - entrypoint.sh argocd-repo-server --redis $(ARGOCD_REDIS_SERVICE):6379
        image: quay.io/argoproj/argocd:v2.5.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz?full=true
            port: 8084
          initialDelaySeconds: 30
          periodSeconds: 5
        name: argocd-repo-server
        ports:
        - containerPort: 8081
        - containerPort: 8084
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8084
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /app/config/ssh
          name: ssh-known-hosts
        - mountPath: /app/config/tls
          name: tls-certs
        - mountPath: /app/config/gpg/source
          name: gpg-keys
        - mountPath: /app/config/gpg/keys
          name: gpg-keyring
        - mountPath: /app/config/reposerver/tls
          name: argocd-repo-server-tls
        - mountPath: /tmp
          name: tmp
        - mountPath: /helm-working-dir
          name: helm-working-dir
        - mountPath: /home/argocd/cmp-server/plugins
          name: plugins
      serviceAccountName: argocd-repo-server
      volumes:
      - configMap:
          name: argocd-ssh-known-hosts-cm
        name: ssh-known-hosts
      - configMap:
          name: argocd-tls-certs-cm
        name: tls-certs
      - configMap:
          name: argocd-gpg-keys-cm
        name: gpg-keys
      - emptyDir: {}
        name: gpg-keyring
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: helm-working-dir
      - name: argocd-repo-server-tls
        secret:
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
          - key: ca.crt
            path: ca.crt
          optional: true
          secretName: argocd-repo-server-tls
      - emptyDir: {}
        name: var-files
      - emptyDir: {}
        name: plugins
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: akuity-agent-network-policy
  namespace: akuity
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
  podSelector:
    matchLabels:
      app.kubernetes.io/name: akuity-agent
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: argocd-application-controller-custom-network-policy
  namespace: akuity
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: argocd-applicationset-controller-network-policy
  namespace: akuity
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 7000
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: argocd-notifications-controller-custom-network-policy
  namespace: akuity
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: argocd-notifications-controller-network-policy
  namespace: akuity
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 9001
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: argocd-redis-custom-network-policy
  namespace: akuity
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-repo-server
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    akuity.io/argo-cd-cluster-name: staging
    akuity.io/argo-cd-instance-id: walu4gkdu1ejkj87
    generation: "1"
  name: repo-server-network-policy
  namespace: akuity
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: akuity-agent
    ports:
    - port: 8081
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  policyTypes:
  - Ingress
